do responsive img part 1, pending zooming

--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,16 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+html, body {
+  height: 100%;
+  width: 100%;
+  margin: 0;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  margin: 0;
+}
 
 ::placeholder {
   color: gray;
 }
-
 
 @font-face {
   font-family: "Lato";
@@ -16,9 +21,3 @@
   font-display: swap;
 }
 
-
-@layer base {
-  body {
-    @apply font-lato bg-green-forest;
-  }
-}
