--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,12 @@ h1, h2, h3, h4, h5, h6 {
   margin: 0;
 }
 
+ul {
+  text-decoration: none;
+  display: flex;
+  flex-direction: column;
+}
+
 ::placeholder {
   color: gray;
 }
