do ui based on designs, css

--- a/src/index.css
+++ b/src/index.css
@@ -10,9 +10,12 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 ul {
-  text-decoration: none;
   display: flex;
   flex-direction: column;
+}
+
+li {
+  list-style: none;
 }
 
 ::placeholder {
@@ -33,6 +36,24 @@ ul {
   src: url('./fonts/Exo-ExtraBold.woff2') format('woff2'),
       url('./fonts/Exo-ExtraBold.woff') format('woff');
   font-weight: bold;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Merriweather';
+  src: url('./fonts/Merriweather-Regular.woff2') format('woff2'),
+      url('./fonts/Merriweather-Regular.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Odibee Sans';
+  src: url('./fonts/OdibeeSans-Regular.woff2') format('woff2'),
+      url('./fonts/OdibeeSans-Regular.woff') format('woff');
+  font-weight: normal;
   font-style: normal;
   font-display: swap;
 }
