--- a/src/index.css
+++ b/src/index.css
@@ -12,10 +12,15 @@ h1, h2, h3, h4, h5, h6 {
 ul {
   display: flex;
   flex-direction: column;
+  padding: 0;
 }
 
 li {
   list-style: none;
+}
+
+a {
+  color: black;
 }
 
 ::placeholder {
