do responsive filter layout

--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,17 @@
-html, body {
+html,
+body {
   height: 100%;
   width: 100%;
   margin: 0;
   overflow-x: hidden;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   margin: 0;
 }
 
@@ -38,27 +44,27 @@ a {
 }
 
 @font-face {
-  font-family: 'Exo';
-  src: url('./fonts/Exo-ExtraBold.woff2') format('woff2'),
-      url('./fonts/Exo-ExtraBold.woff') format('woff');
+  font-family: "Exo";
+  src: url("./fonts/Exo-ExtraBold.woff2") format("woff2"),
+    url("./fonts/Exo-ExtraBold.woff") format("woff");
   font-weight: bold;
   font-style: normal;
   font-display: swap;
 }
 
 @font-face {
-  font-family: 'Merriweather';
-  src: url('./fonts/Merriweather-Regular.woff2') format('woff2'),
-      url('./fonts/Merriweather-Regular.woff') format('woff');
+  font-family: "Merriweather";
+  src: url("./fonts/Merriweather-Regular.woff2") format("woff2"),
+    url("./fonts/Merriweather-Regular.woff") format("woff");
   font-weight: normal;
   font-style: normal;
   font-display: swap;
 }
 
 @font-face {
-  font-family: 'Odibee Sans';
-  src: url('./fonts/OdibeeSans-Regular.woff2') format('woff2'),
-      url('./fonts/OdibeeSans-Regular.woff') format('woff');
+  font-family: "Odibee Sans";
+  src: url("./fonts/OdibeeSans-Regular.woff2") format("woff2"),
+    url("./fonts/OdibeeSans-Regular.woff") format("woff");
   font-weight: normal;
   font-style: normal;
   font-display: swap;
